<resources>
    <string name="app_name">Sqlite</string>
    <string name="hintKey">Insert your key</string>
    <string name="buttonValidate">Validate</string>
    <string name="keyListing">List all keys</string>
    <string name="autheticatedKeyList">List authenticated keys</string>
    <string name="hintAuthentication">Insert password</string>
    <string name="ButtonRegister">Register</string>
    <string name="listAuthenticated">List Autheticated Keys</string>
    <string name="listScreenButton">List screen</string>
</resources>